# StableGuard

./: .gitignore  CLAUDE.md  README.md  claude.md  plan.md  requirements.txt
api-service/: README.md  TUTORIAL.md  pyproject.toml
api-service/app/: config.py  database.py  horse_identifier.py  main.py  ml_client.py  models.py  schemas.py
api-service/app/routes/: detections.py  horses.py  locations.py
backend/: README.md  TUTORIAL.md  pyproject.toml
backend/app/: __init__.py  config.py  database.py  embedding_service.py  horse_identifier.py  main.py  models.py  schemas.py  vlm_service.py
backend/app/routes/: detections.py  horses.py
data/: stableguard.db
ml-service/: .env.example  pyproject.toml
ml-service/app/: config.py  main.py  registry.py  schemas.py
ml-service/app/models/: embedder.py  vlm.py
ml-service/app/routes/: action.py  embed.py  health.py
server/api/: main.py
server/detection/: pipeline.py  worker.py
server/ingestion/: api.py  mqtt_listener.py
server/storage/: db.py
tests/: conftest.py  test_ingestion_api.py
web/: README.md  package-lock.json
web-service/: README.md  package.json  pyproject.toml  requirements.txt  vite.config.ts
web-service/src/api/: detections.ts  types.ts
web-service/src/components/horses/: HorseCard.tsx
web-service/src/components/layout/: AppShell.tsx  Sidebar.tsx
web-service/src/components/shared/: ConfidenceBadge.tsx  ConfirmDialog.tsx
web-service/src/components/ui/: dialog.tsx
web-service/src/hooks/: useDetections.ts
web-service/src/pages/: AnalyzerPage.tsx  DashboardPage.tsx  LocationsPage.tsx
web/src/: App.tsx  index.css
web/src/api/: client.ts  horses.ts  locations.ts
web/src/components/detections/: AnalysisResult.tsx  AnalyzerForm.tsx  DetectionTimeline.tsx
web/src/components/horses/: HorseForm.tsx
web/src/hooks/: useHorses.ts  useLocations.ts
web/src/lib/: images.ts
web/src/pages/: HorseDetailPage.tsx  HorsesPage.tsx
(+6 files in other folders)
